--- a/backend/sass/base/_common.scss
+++ b/backend/sass/base/_common.scss
@@ -1,8 +1,10 @@
 .block-main-header {
-  & .logo-mini img,
-  & .logo-lg img {
-    margin-bottom: 5px;
-    height: 50px;
+  & .logo-mini,
+  & .logo-lg {
+    & img {
+      margin-bottom: 5px;
+      height: 50px;
+    }
   }
 }
 
@@ -32,9 +34,7 @@
     border: none;
   }
   & .content-header {
-    & h1 {
-      display: none;
-    }
+    & h1,
     &>.breadcrumb {
       display: none;
     }
@@ -52,34 +52,65 @@
     & .sidebar-toggle:hover {
       background-color: #FF6969;
     }
+    & .navbar-custom-menu {
+      .navbar-nav {
+          float: right;
+          margin-right: 0px;
+          & .user-menu {
+            & .user-image {
+              width: 45px;
+              height: 45px;
+              margin-top: -12px;
+              margin-right: 5px;
+            }
+          }
+        } 
+      }
+    }
   }
 }
+
+@media (max-width: 767px) {
+  .skin-red-light {
+    .block-main-header {
+    & .navbar {
+      & .navbar-custom-menu {
+        & .navbar-nav {
+            & .user-menu {
+              & .user-image {
+                width: 30px;
+                height: 30px;
+              }
+            }
+          } 
+        }
+      }
+    }
+  }
 }
 
 .skin-red-light {
   & .block-menu {
     &>li {
-      &.treeview {
-        margin-top: 15px;
-        border: 3px solid #ED7D31;
-        line-height: 31px;
-        font-size: 21px;
-        &>a {
-          padding: 8px 5px 8px 15px;
-          &.center-text-cus {
-            border-left: none;
-            font-size: 16px;
-            padding: 11px 5px 11px 15px
-          }
+      margin-top: 15px;
+      border: 3px solid #ED7D31;
+      line-height: 31px;
+      font-size: 21px;
+      &>a {
+        padding: 8px 5px 8px 15px;
+        &.center-text-cus {
+          border-left: none;
+          font-size: 16px;
+          padding: 11px 5px 11px 15px
         }
-        & .fa {
-          font-size: 25px;
-          padding-right: 30px;
-          margin-left: -7px;
-        }
-        &:first-child {
-          margin-top: 30px;
-        }
+      }
+      & .fa {
+        font-size: 25px;
+        padding-right: 30px;
+        margin-left: -7px;
+      }
+      &:first-child {
+        margin-top: 30px;
       }
       &.treeview_new {
         text-align: center;
@@ -117,4 +148,10 @@
 }
 .box-tools {
   display: none;
+}
+/* Select2 Width 100% */
+.selectw100 {
+  & .select2 {
+    width: 100% !important;
+  }
 }
