--- a/backend/sass/layout/_header.scss
+++ b/backend/sass/layout/_header.scss
@@ -3,11 +3,8 @@
     display: none;
   }
   .main-sidebar {
-    width: 50px!important;
-    -webkit-transform: translate(0,0)!important;
-    -ms-transform: translate(0,0)!important;
-    -o-transform: translate(0,0)!important;
-    transform: translate(0,0)!important;
+    width: 50px;
+    @include translate3d(0, 0, 0);
     & .sidebar-menu {
       &>li {
         &>a {
@@ -20,6 +17,6 @@
   }
   .content-wrapper,
   .main-footer {
-    margin-left: 50px!important;
+    margin-left: 50px;
   }
 }
