--- a/backend/sass/pages/_index.scss
+++ b/backend/sass/pages/_index.scss
@@ -8,7 +8,7 @@
   background: #FF0000;
   color: #fff;
   text-align: center;
-  padding: 5px 0px;
+  padding: 5px 0;
   @include border-radius(5px);
   margin-bottom: 20px;
 }
@@ -34,19 +34,16 @@
   @include border-radius(5px);
   @include size(100%,50px);
   border: 3px solid #FACA83;
-  padding: 0px 5px;
+  padding: 0 5px;
   & span {
     font-size: 25px;
     line-height: 25px;
-    padding: 0px 30px;
+    padding: 0 30px;
     width: 100%;
     position: absolute;
     top: 50%;
-    left: 0px;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-    transform: translateY(-50%);
+    left: 0;
+    @include translate3d(0, -50%, 0);
   }
 }
 
@@ -69,8 +66,7 @@
     border: 3px solid #ED7D31;
     background: #ED7D31;
     position: relative;
-    border-radius: 0px;
-    @include border-radius(0px);
+    @include border-radius(0);
     &:before,
     &:after {
       content: "";
@@ -128,12 +124,11 @@
     margin-bottom: 10px;
   }
   & .bg-trun {
-    background-color: transparent !important;
+    background-color: transparent ;
     border-top: none;
   }
   & .boxView {
     @include border-radius(5px);
-    // @include box-shadow(none);
     @include transition(box-shadow, .3s, ease);
     border: 3px solid #ED7D31;
     text-align: center;
@@ -160,22 +155,22 @@
   position: relative;
   overflow: hidden;
   & .small-box {
-    border-radius: 0px;
-    margin-bottom: 0px;
+    @include border-radius(0);
+    margin-bottom: 0;
     padding-top: 22px;
     box-shadow: none;
   }
   & .bg-yellow-top {
-    border-top-left-radius: 25px;
+    @include border-radius-corner(25px, 0, 0, 0);
   }
   & .bg-red-top {
-    border-top-right-radius: 25px;
+    @include border-radius-corner(0, 25px, 0, 0);
   }
   & .bg-primary-bot {
-    border-bottom-left-radius: 25px;
+    @include border-radius-corner(0, 0, 0, 25px);
   }
   & .bg-aqua-bot {
-    border-bottom-right-radius: 25px;
+    @include border-radius-corner(0, 0, 25px, 0);
     background-color: #176868;
     color: #fff;
   }
@@ -199,22 +194,19 @@
   & .box-header {
     background: #fff;
     border: 3px solid #D6712B;
-    color: #000!important;
+    color: #000;
     font-size: 25px;
     & .box-title {
-      font-size: 25px!important;
+      font-size: 25px;
       font-weight: 600;
     }
   }
   & .box-body {
-    background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #39cccc), color-stop(1, #7adddd)) !important;
-    background: -ms-linear-gradient(bottom, #39cccc, #7adddd) !important;
-    background: -moz-linear-gradient(center bottom, #39cccc 0, #7adddd 100%) !important;
-    background: -o-linear-gradient(#7adddd, #39cccc) !important;
+    @include gradient(#7adddd, #39cccc);
   }
   & .box-footer {
-    border: 3px solid #D6712B!important;
-    padding: 0px;
+    border: 3px solid #D6712B;
+    padding: 0;
     & .col-xs-6 {
       &:first-child {
         border-right: 3px solid #D6712B;
@@ -225,7 +217,7 @@
       margin-bottom: -4px;
     }
     & .knob-label {
-      font-size: 25px !important;
+      font-size: 25px ;
     }
   }
 }
@@ -235,16 +227,16 @@
   & .box {
     border: 5px solid #5B9BD5;
     @include border-radius(0);
-    border-top-color: #6bb3dd !important;
+    border-top-color: #6bb3dd ;
     margin-bottom: 0;
     & .box-header {
       border-bottom: 1px solid #a9e0ff;
       background-color: #d4ebf9;
       background-color: white;
-      border-bottom: none !important;
+      border-bottom: none ;
       & .box-title {
         font-weight: 400;
-        font-size: 15px !important;
+        font-size: 15px ;
       }
     }
   }
@@ -260,8 +252,8 @@
     & .col-sm-4 {
       margin-top: 5px;
       & .row {
-        margin-left: 0px;
-        margin-right: 0px;
+        margin-left: 0;
+        margin-right: 0;
       }
     }
   }
