--- a/backend/sass/pages/_login.scss
+++ b/backend/sass/pages/_login.scss
@@ -21,7 +21,7 @@ body {
     @include size(535px,100%);
     right: 0;
     background: rgba(0, 9, 22, 0.8);
-    padding: 0px 40px;
+    padding: 0 40px;
     overflow-y: auto;
     overflow-x: hidden;
   }
@@ -54,11 +54,7 @@ body {
       transition: 0.2s ease-out;
       &.active {
         font-size: 11px;
-        -webkit-transform: translateY(-140%);
-        -moz-transform: translateY(-140%);
-        -ms-transform: translateY(-140%);
-        -o-transform: translateY(-140%);
-        transform: translateY(-140%);
+        @include translate3d(0, -140%, 0);
       }
     }
     & input {
@@ -93,7 +89,6 @@ body {
     border-bottom: 1px solid #9e9e9e;
     outline: none;
     @include size(100%,43px);
-    // @include box-shadow(none);
     @include box-sizing(content-box);
     @include transition(all, .3s);
     font-size: 14px;
@@ -145,9 +140,9 @@ body {
 .login {
   & .modal {
     & .modal-content {
-      border-radius: 0px;
+      @include border-radius(0);
       & .modal-header {
-        border-radius: 0px;
+        @include border-radius(0);
         color: #707780;
         font-family: 'Nunito', sans-serif;
         font-size: 18px;
@@ -178,7 +173,7 @@ body {
       color: #fb5d5d;
     }
     & .input-style {
-      border-radius: 0px;
+      @include border-radius(0);
       font-weight: 300;
       line-height: 40px;
       color: #aaaaaa;
@@ -187,7 +182,6 @@ body {
       border-bottom: 1px solid #9e9e9e;
       outline: none;
       @include border-radius(0);
-      // @include box-shadow(none);
       @include box-sizing(content-box);
       @include transition(all, .3s);
       height: 3rem;
