--- a/frontend/sass/pages/home.scss
+++ b/frontend/sass/pages/home.scss
@@ -15,14 +15,12 @@
   & .owl-carousel .owl-nav .owl-prev {
   	position: absolute;
 	  top: 50%;
-	  -webkit-transform: translate(0, -50%);
-	  -ms-transform: translate(0, -50%);
-	  transform: translate(0, -50%);
+	  @include translate3d(0, -50%, 0);
 	  width: 32px;
 	  height: 32px;
 	  text-align: center;
 	  background: #6C6A6A;
-	  border-radius: 100%;
+	  @include border-radius(100%);
 	  & i {
 	  	color: #fff;
 		  line-height: 30px;
@@ -33,33 +31,25 @@
   	right: -40px;
 	  opacity: 0;
 	  visibility: hidden;
-	  -webkit-transition: 0.3s;
-	  -o-transition: 0.3s;
-	  transition: 0.3s;
+	  @include transition(all, 0.3s);
   }
   & .owl-carousel .owl-nav .owl-prev {
   	left: -40px;
 	  opacity: 0;
 	  visibility: hidden;
-	  -webkit-transition: 0.3s;
-	  -o-transition: 0.3s;
-	  transition: 0.3s;
+	  @include transition(all, 0.3s);
   }
   &:hover .owl-carousel .owl-nav .owl-next {
   	right: 10px;
 	  opacity: 1;
 	  visibility: visible;
-	  -webkit-transition: 0.3s;
-	  -o-transition: 0.3s;
-	  transition: 0.3s;
+	  @include transition(all, 0.3s);
   }
   &:hover .owl-carousel .owl-nav .owl-prev {
   	left: 10px;
 	  opacity: 1;
 	  visibility: visible;
-	  -webkit-transition: 0.3s;
-	  -o-transition: 0.3s;
-	  transition: 0.3s;
+	  @include transition(all, 0.3s);
   }
   & .owl-dots {
 	  position: absolute;
@@ -75,13 +65,11 @@
 		  height: 10px;
 		  margin: 0 5px;
 		  outline: 0;
-		  -moz-border-radius: 5px;
-		  -webkit-border-radius: 5px;
-		  border-radius: 5px;
-		}
-		&:hover,
-		&.active {
-			background: #fff;
+		  @include border-radius(5px);
+		  &:hover,
+			&.active {
+				background: #fff;
+			}
 		}
 	}
 }
@@ -144,8 +132,8 @@
 	  height: 5px;
 	  margin: 5px 7px;
 	  background: #D6D6D6;
-	  transition: opacity 200ms ease;
-	  border-radius: 5px;
+	  @include transition(opacity, 200ms, ease);
+	  @include border-radius(5px);
 	  text-indent: 99999999px;
 	  &:hover,
 	  &.active {
