--- a/backend/sass/helpers/_mixins.scss
+++ b/backend/sass/helpers/_mixins.scss
@@ -10,6 +10,8 @@
 	transition: $property $duration $easing;
 	-webkit-transition: $property $duration $easing;
 	-moz-transition: $property $duration $easing;
+	-o-transition: $property $duration $easing;
+	-ms-transition: $property $duration $easing;
 }
 
 // Border Radius
