--- a/backend/sass/pages/_index.scss
+++ b/backend/sass/pages/_index.scss
@@ -100,8 +100,7 @@
     &:after {
       content: '';
       position: absolute;
-      width: 90%;
-      height: 1px;
+      @include size(90%,1px);
       background: #333;
       left: 5%;
     }
