--- a/backend/sass/pages/_member.scss
+++ b/backend/sass/pages/_member.scss
@@ -35,8 +35,7 @@
   }
   & .img-level2 {
     & img {
-      width: 60px;
-      height: 60px;
+      @include size(60px,60px);
     }
   }
   & .img-npp {
