--- a/backend/sass/style.scss
+++ b/backend/sass/style.scss
@@ -4,6 +4,8 @@
 /*****BASE*****/
 @import "base/reset";
 @import "base/common";
+/*****COMPONENTS*****/
+@import "components/button";
 /*****LAYOUT*****/
 @import "layout/header";
 @import "layout/footer";
