--- a/backend/sass/base/_common.scss
+++ b/backend/sass/base/_common.scss
@@ -101,7 +101,8 @@
         &.center-text-cus {
           border-left: none;
           font-size: 16px;
-          padding: 11px 5px 11px 15px
+          padding: 11px 5px 11px 15px;
+          color: #000;
         }
       }
       & .fa {
@@ -140,7 +141,7 @@
 }
 .box-title {
   font-weight: 400;
-  font-size: 15px !important;
+  font-size: 15px;
 }
 .line {
   margin: 10px 0px;
