--- a/backend/sass/style.scss
+++ b/backend/sass/style.scss
@@ -6,6 +6,7 @@
 @import "base/common";
 /*****COMPONENTS*****/
 @import "components/button";
+@import "components/modal";
 /*****LAYOUT*****/
 @import "layout/header";
 @import "layout/footer";
