--- a/frontend/sass/base/_common.scss
+++ b/frontend/sass/base/_common.scss
@@ -42,6 +42,10 @@
 .block-page-contact {
   padding: 60px 0;
 }
+.page-title {
+	font-weight: bold;
+	font-size: 14px;
+}
 /*----------------
 [Styles for devices min 767px
 */
