--- a/backend/sass/pages/_login.scss
+++ b/backend/sass/pages/_login.scss
@@ -1,6 +1,5 @@
 body {
   &.login {
-    font-family: 'Nunito', sans-serif;
     font-weight: 300;
     font-size: 14px;
     margin: 0;
@@ -29,7 +28,6 @@ body {
 .form-login {
   & .signup-heading {
     font-size: 20px;
-    font-family: 'Nunito', sans-serif;
     text-transform: uppercase;
     color: #ffffff;
     margin-top: 50%;
@@ -140,7 +138,7 @@ body {
       & .modal-header {
         @include border-radius(0);
         color: #707780;
-        font-family: 'Nunito', sans-serif;
+  
         font-size: 18px;
         font-weight: 400;
         letter-spacing: 0.25px;
@@ -157,14 +155,14 @@ body {
     }
     & .modal-body {
       color: #9398a0;
-      font-family: 'Nunito', sans-serif;
+
       font-size: 14px;
       font-weight: 300;
       letter-spacing: 0.25px;
       line-height: 24px;
     }
     & .note {
-      margin-top: 30px;
+      margin-top: 15px;
       color: #707780;
       color: #fb5d5d;
     }
@@ -176,12 +174,13 @@ body {
       background-color: transparent;
       border: none;
       border-bottom: 1px solid #9e9e9e;
+      @include box-shadow(0, 0, 0, 0 transparent);
       outline: none;
       @include border-radius(0);
       @include box-sizing(content-box);
       @include transition(all, .3s);
       @include size(100%,3rem);
-      font-size: 1rem;
+      font-size: 1.4rem;
       margin: 0 0 15px 0;
       padding: 0;
       &:focus {
